# kitchen-timer

./: .gitignore  MANIFEST.in  pyproject.toml  setup.cfg  style.css  timer
kitchentimer/: timer.py
