[metadata]
name = kitchentimer
description = A kitchen timer application
url = https://github.com/JesseMFrey/kitchen-timer

[options]
packages = find:
install_requires =
    sounddevice
    SoundFile
    PyGObject
    numpy
include_package_data = True


[options.entry_points]
gui_scripts =
    kitchentimer = kitchentimer.timer:main

